[view] refactor display of entity notes
and minor fixes

Signed-off-by: Torbjörn Klatt <opensource@torbjoern-klatt.de>

--- a/app/views/collections/show/_content.html.erb
+++ b/app/views/collections/show/_content.html.erb
@@ -16,14 +16,14 @@
 <div class="row">
   <label class="col-md-3"><strong><%= Collection.human_attribute_name :notes %></strong></label>
   <div class="col-md-9">
-    <%= collection.notes %>
+    <%= render partial: 'shared/show/entity_notes', locals: { notes: collection.notes } %>
   </div>
 </div>
 <% if native %>
   <div class="row">
     <label class="col-md-3"><strong><%= Document.model_name.human(count: 2) %></strong></label>
     <% if collection.documents.count > 0 %>
-      <ul class="col-md-9 list-group list-group-flush" id="collection-documents-accordion"
+      <ul class="col-md-9 list-group list-group-flush" id="documents-accordion"
           role="tablist" aria-multiselectable="true">
         <%= render partial: 'documents/nested_show',
                    collection: collection.documents, as: :document %>
@@ -35,7 +35,7 @@
   <div class="row">
     <label class="col-md-3"><strong><%= Storage.model_name.human(count: 2) %></strong></label>
     <% if collection.storages.count > 0 %>
-      <ul class="col-md-9 list-group list-group-flush" id="collection-storages-accordion"
+      <ul class="col-md-9 list-group list-group-flush" id="storages-accordion"
           role="tablist" aria-multiselectable="true">
         <%= render partial: 'storages/nested_show',
                    collection: collection.storages, as: :storage %>
