--- a/app/views/documents/show/_content.html.erb
+++ b/app/views/documents/show/_content.html.erb
@@ -16,7 +16,7 @@
 <div class="row">
   <label class="col-md-3"><strong><%= Document.human_attribute_name :notes %></strong></label>
   <div class="col-md-9">
-    <%= document.notes %>
+    <%= render partial: 'shared/show/entity_notes', locals: { notes: document.notes } %>
   </div>
 </div>
 <% if native %>
