--- a/app/views/people/show/_content.html.erb
+++ b/app/views/people/show/_content.html.erb
@@ -17,10 +17,6 @@
 <div class="row">
   <label class="col-md-3"><strong><%= Person.human_attribute_name :notes %></strong></label>
   <div class="col-md-9">
-    <% if person.notes.nil? or person.notes.empty? %>
-      <em class="text-muted"><%= t('views.no_notes') %></em>
-    <% else %>
-      <%= person.notes %>
-    <% end %>
+    <%= render partial: 'shared/show/entity_notes', locals: { notes: person.notes } %>
   </div>
 </div>
