--- a/app/views/storages/_nested_show.html.erb
+++ b/app/views/storages/_nested_show.html.erb
@@ -1,14 +1,12 @@
 <li class="list-group-item">
   <div id="storage-<%= storage.id %>" class="list-group-item-heading" role="tab">
-    <%= icon_for Storage %>
-    <%= storage.title %>
-    <a class="pull-right btn btn-sm collapsed"
-       aria-controls="storage-<%= storage.id %>-content"
+    <a aria-controls="storage-<%= storage.id %>-content"
        aria-expanded="false"
        href="#storage-<%= storage.id %>-content"
-       data-parent="#collection-storages-accordion"
+       data-parent="#storages-accordion"
        data-toggle="collapse">
-      <%= icon('search', class: 'fa-fw') %>
+      <%= icon_for Storage %>
+      <%= storage.title %>
     </a>
   </div>
   <div id="storage-<%= storage.id %>-content"
