--- a/app/views/storages/show/_content.html.erb
+++ b/app/views/storages/show/_content.html.erb
@@ -10,11 +10,7 @@
 <div class="row">
   <label class="col-md-3"><strong><%= Storage.human_attribute_name :notes %></strong></label>
   <div class="col-md-9">
-    <% if storage.notes %>
-      <%= storage.notes %>
-    <% else %>
-      <span class="text-muted"><%= t('views.no_notes') %></span>
-    <% end %>
+    <%= render partial: 'shared/show/entity_notes', locals: { notes: storage.notes } %>
   </div>
 </div>
 <% if native %>
