--- a/app/views/people/_person.html.erb
+++ b/app/views/people/_person.html.erb
@@ -31,20 +31,18 @@
       <%= person.mentions.count %>
       <%= icon_for Mention %>
     <% end %>
-    <%= link_to places_path(person_id: person.id),
-                class: 'btn btn-sm btn-secondary',
-                title: t('views.show_linked', what: Place.model_name.human(count: 2)),
-                data: { toggle: 'tooltip' } do %>
+    <span class="btn btn-sm btn-secondary"
+          title="<%= t('views.number_linked', what: Place.model_name.human(count: 2)) %>"
+          data-toggle="tooltip">
       <%= person.mentioned_places.length %>
       <%= icon_for Place %>
-    <% end %>
-    <%= link_to roles_path(person_id: person.id),
-                class: 'btn btn-sm btn-secondary',
-                title: t('views.show_linked', what: Role.model_name.human(count: 2)),
-                data: { toggle: 'tooltip' } do %>
+    </span>
+    <span class="btn btn-sm btn-secondary"
+          title="<%= t('views.number_linked', what: Role.model_name.human(count: 2)) %>"
+          data-toggle="tooltip">
       <%= person.mentioned_roles.length %>
       <%= icon_for Role %>
-    <% end %>
+    </span>
     <%= link_to deeds_path(person_id: person.id),
                 class: 'btn btn-sm btn-secondary',
                 title: t('views.show_linked', what: Deed.model_name.human(count: 2)),
