--- a/app/views/people/index.html.erb
+++ b/app/views/people/index.html.erb
@@ -6,6 +6,15 @@
                        entity_model: Person } %>
 </h1>
 
+<% if @deed %>
+  <dl class="row">
+    <dt class="col-md-2"><%= t('views.linked_with', what: Deed.model_name.human) %></dt>
+    <dd class="col-md-10">
+      <%= render partial: 'deeds/oneline', locals: { deed: @deed } %>
+    </dd>
+  </dl>
+<% end %>
+
 <div class="row">
   <div id="people-table">
     <div class="table" id="people">
