--- a/app/views/deeds/_deed.html.erb
+++ b/app/views/deeds/_deed.html.erb
@@ -83,12 +83,12 @@
       ?
       <%= icon('external-link', class: 'fa-fw') %>
     <% end %>
-    <%= link_to nil,#seals_path(deed_id: deed.id),
+    <%= link_to seals_path(deed_id: deed.id),
                 class: 'btn btn-sm btn-secondary',
-                title: t('views.show_linked', what: 'Seals'),
+                title: t('views.show_linked', what: Seal.model_name.human(count: 2)),
                 data: { toggle: 'tooltip' } do %>
-      ?
-      <%= icon('bookmark-o', class: 'fa-fw') %>
+      <%= deed.seals.count %>
+      <%= icon_for Seal %>
     <% end %>
   </div>
 
