[model][view][control] directly attach Seals to Deeds
no intermediate model

Signed-off-by: Torbjörn Klatt <opensource@torbjoern-klatt.de>

--- a/app/assets/stylesheets/_seals.scss
+++ b/app/assets/stylesheets/_seals.scss
@@ -2,12 +2,23 @@
 // They will automatically be included in application.css.scss.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-.table {
+#seals.table {
   .entity.row {
     .col-info {
       .col-seal-title {
-        @include make-col(6);
+        @include make-col(4);
         @extend .p-x-0;
+      }
+      .col-seal-material {
+        @include make-col(2);
+        @extend .p-x-0;
+      }
+      .col-seal-attachment {
+        @include make-col(2);
+        @extend .p-x-0;
+      }
+      .col-meta {
+        @include make-col(4);
       }
     }
   }
