[model][view][control] Authors for References
Signed-off-by: Torbjörn Klatt <opensource@torbjoern-klatt.de>

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -18,6 +18,7 @@
 @import "04_menu";
 @import "09_flash";
 
+@import "authors";
 @import "collections";
 @import "contents";
 @import "content_translations";
