--- a/app/views/shared/_menu.html.erb
+++ b/app/views/shared/_menu.html.erb
@@ -62,4 +62,16 @@
       </li>
     </ul>
   </li>
+  <li class="nav-item">
+    References
+
+    <ul class="nav nav-pulls nav-stacked bg-faded" role="menu">
+      <li class="nav-item">
+        <%= link_to authors_path, class: "nav-link#{' active' if current_page?(controller: :authors)}" do %>
+          <%= model_name_with_icon Author, :plural %>
+          <span class="tag tag-pill tag-default pull-right"><%= Author.count %></span>
+        <% end %>
+      </li>
+    </ul>
+  </li>
 </ul>
