--- a/app/views/deeds/_oneline.html.erb
+++ b/app/views/deeds/_oneline.html.erb
@@ -1,6 +1,6 @@
 <div class="oneline oneline-deed">
   <%= icon_for Deed %>
-  <span class="storage-title">
+  <span class="deed-title">
     <%= @deed.title %>
   </span>
   <div class="deed-actions btn-group btn-group-sm">
