--- a/app/views/seals/_nested_show.html.erb
+++ b/app/views/seals/_nested_show.html.erb
@@ -1,4 +1,4 @@
-<p class="card-text">
+<li class="list-group-item">
   <span class="clearfix">
     <%= seal.title %>
     <span class="pull-right">
@@ -9,4 +9,4 @@
     <%= t(seal.material, scope: 'activerecord.attributes.seal.materials') %>,
     <%= t(seal.attachment_type, scope: 'activerecord.attributes.seal.attachment_types') %>
   </span>
-</p>
+</li>
