--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -18,7 +18,7 @@
 @import "04_menu";
 @import "09_flash";
 
-@import "authors";
+@import "references";
 @import "collections";
 @import "contents";
 @import "content_translations";
